Fix alignment with trending icon

--- a/packages/experiments/src/components/signals/Signals.scss
+++ b/packages/experiments/src/components/signals/Signals.scss
@@ -57,6 +57,7 @@
 
 .trending {
   color: #006257;
+  padding-top: 0.2em;
 }
 
 .blocked {
